--- a/Практика_по_курсу_Введение в Python_Практикум.ipynb
+++ b/Практика_по_курсу_Введение в Python_Практикум.ipynb
@@ -1110,7 +1110,7 @@
     "\n",
     "Координаты клетки заданы двумя числами от 1 до 8. Сначала номер столбца, потом номер строки.\n",
     "\n",
-    "Король ходит по горизонтали, вертикали, диагонали во всез направлениях на 1 клетку.\n",
+    "Король ходит по горизонтали, вертикали, диагонали во всеx направлениях на 1 клетку.\n",
     "\n",
     "Sample Input:\n",
     "\n",
@@ -1144,6 +1144,251 @@
     "    print(5)\n",
     "else:\n",
     "    print(8 if 1 < a < 8 and 1 < b < 8 else 3) # 3 если в углах, т.е. if (a == 1 or a == 8) and (b == 1 or b == 8) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Какие-то пробы с рекурсией, которое не относятся к данному курсу:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rec_func 0\n",
+      "else\n",
+      "rec_func 1\n",
+      "else\n",
+      "rec_func 2\n",
+      "if\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "\n",
+    "def rec_func(count):\n",
+    "    print('rec_func', count)\n",
+    "    count += 1\n",
+    "    \n",
+    "    if count == 3:\n",
+    "        print('if')\n",
+    "        return 1\n",
+    "    else:\n",
+    "        print('else')\n",
+    "        return rec_func(count)\n",
+    "    \n",
+    "print(rec_func(count))   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rec_func count == 0\n",
+      "else\n",
+      "rec_func count == 1\n",
+      "else\n",
+      "rec_func count == 2\n",
+      "if\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "\n",
+    "def rec_func(count):\n",
+    "    print('rec_func', f'count=={count}')\n",
+    "    count += 1\n",
+    "    \n",
+    "    if count == 3:\n",
+    "        print('if')\n",
+    "        return 1\n",
+    "    else:\n",
+    "        print('else')\n",
+    "        rec_func(count)\n",
+    "    \n",
+    "print(rec_func(count))  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Задача 8\n",
+    "Может ли шахматный король перейти из одной клетки в другую за один ход.\n",
+    "\n",
+    "Координаты каждой клетки задаются двумя числами от 1 до 8. Сначала номер столбца, потом номер строки.\n",
+    "\n",
+    "В качестве результата выведите \"YES\" или \"NO\" (заглавными буквами, без кавычек).\n",
+    "\n",
+    "Sample Input:\n",
+    "\n",
+    "8  \n",
+    "3  \n",
+    "7  \n",
+    "4  \n",
+    "\n",
+    "Sample Output:\n",
+    "\n",
+    "YES"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__#1__ Не проходит все тесты на stepic, т.к. не добавлено условие на равернство клеток (см. решение #2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "3\n",
+      "3\n",
+      "NO\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1, y1, x2, y2 = (int(input()) for i in range(4))\n",
+    "print('YES' if abs(x1 - x2) <= 1 and abs(y1 - y2) <= 1 else 'NO')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Тесты:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NO\tNO\tNO\tNO\tNO\tNO\tNO\tNO\t\n",
+      "YES\tYES\tNO\tNO\tNO\tNO\tNO\tNO\t\n",
+      "YES\tYES\tNO\tNO\tNO\tNO\tNO\tNO\t\n",
+      "YES\tYES\tNO\tNO\tNO\tNO\tNO\tNO\t\n",
+      "NO\tNO\tNO\tNO\tNO\tNO\tNO\tNO\t\n",
+      "NO\tNO\tNO\tNO\tNO\tNO\tNO\tNO\t\n",
+      "NO\tNO\tNO\tNO\tNO\tNO\tNO\tNO\t\n",
+      "NO\tNO\tNO\tNO\tNO\tNO\tNO\tNO\t\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isMove(x1, y1, x2, y2):\n",
+    "    return 'YES' if abs(x1 - x2) <= 1 and abs(y1 - y2) <= 1 else 'NO'\n",
+    "\n",
+    "x1, y1 = 1, 3\n",
+    "for y in range(1, 9):\n",
+    "    for x in range(1, 9):\n",
+    "        print(isMove(x1, y1, x, y), end='\\t')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__#2__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "1\n",
+      "NO\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1, y1, x2, y2 = (int(input()) for i in range(4))\n",
+    "\n",
+    "if abs(x1 - x2) <= 1 and abs(y1 - y2) <= 1 \\\n",
+    "    and (x1 != x2 or y1 != y2):  # Проверка, что клетки не совпадают\n",
+    "    print('YES')    # т.е. отрицание выр-я: (x1 == x2 and y1 == y2)\n",
+    "else:\n",
+    "    print('NO')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Тесты:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NO\tNO\tNO\tNO\tNO\tNO\tNO\tNO\t\n",
+      "NO\tYES\tYES\tYES\tNO\tNO\tNO\tNO\t\n",
+      "NO\tYES\tNO\tYES\tNO\tNO\tNO\tNO\t\n",
+      "NO\tYES\tYES\tYES\tNO\tNO\tNO\tNO\t\n",
+      "NO\tNO\tNO\tNO\tNO\tNO\tNO\tNO\t\n",
+      "NO\tNO\tNO\tNO\tNO\tNO\tNO\tNO\t\n",
+      "NO\tNO\tNO\tNO\tNO\tNO\tNO\tNO\t\n",
+      "NO\tNO\tNO\tNO\tNO\tNO\tNO\tNO\t\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isMove(x1, y1, x2, y2):\n",
+    "    if abs(x1 - x2) <= 1 and abs(y1 - y2) <= 1 \\\n",
+    "        and (x1 != x2 or y1 != y2):\n",
+    "        return 'YES'\n",
+    "    else:\n",
+    "        return 'NO'\n",
+    "\n",
+    "x1, y1 = 3, 3\n",
+    "for y in range(1, 9):\n",
+    "    for x in range(1, 9):\n",
+    "        print(isMove(x1, y1, x, y), end='\\t')\n",
+    "    print()"
    ]
   },
   {
